# tk-normalizer

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy_to_pypi.yml  deploy_to_snowflake.yml
docs/: ARCHITECTURE.md
src/tk_normalizer/: __init__.py  normalizer.py
tests/: test_normalizer.py
